# spin_shell

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  run.sh
.github/workflows/: ci.yml  release.yml
docs/internals_cpp/: lib_func.md  sys_calls.md
docs/phase1/: glob_expansion.md  pipe_processing.md
scripts/: install-linux.sh  install-macos.sh  install-windows-terminal.ps1
src/: main.cpp
src/commands/: command.cpp  command.hpp  commands.cpp  commands.hpp  dispatch.cpp  dispatch.hpp
src/commands/handlers/: clear.cpp  echo.cpp  echo.hpp  help.cpp  help.hpp  type.cpp  type.hpp
src/commands/handlers/builtins/: cd.cpp  cd.hpp  exit.cpp  exit.hpp  export.cpp  export.hpp  help.cpp  help.hpp  history.cpp  history.hpp  pwd.cpp  pwd.hpp  type.cpp  type.hpp
src/commands/handlers/tools/: cat.cpp  cat.hpp  clear.cpp  clear.hpp  cp.cpp  cp.hpp  echo.cpp  echo.hpp  grep.cpp  grep.hpp  ls.cpp  ls.hpp  mkdir.cpp  mkdir.hpp  mv.cpp  mv.hpp  (+6 more)
src/parser/: parser.cpp  parser.hpp
src/utils/: findInPath.hpp  quote_utils.hpp
src/utils/color/: color.cpp  color.hpp
src/utils/executors/: executor.cpp  executor.hpp
src/utils/handlers/: flag_set.hpp  flag_value.hpp  input_handler.cpp  input_handler.hpp
src/utils/parser/: parser.cpp  parser.hpp
src/utils/path/: path.cpp  path.hpp
src/utils/pipe/: pipe_runner.cpp  pipe_runner.hpp  pipe_utils.cpp  pipe_utils.hpp
src/utils/redirections/: redirection.cpp  redirection.hpp  redirection_guard.hpp
src/utils/shell_state/: shell_state.cpp  shell_state.hpp
src/utils/type/: type.cpp  type.hpp
tests/: glob.sh  smoke.sh
(+6 files in other folders)
